# crabby-chatty

./: .bacon-locations  .gitignore  Cargo.toml  Justfile  TODO.md  chat.Dockerfile  justfile  mise.toml  postgres-language-server.jsonc  rustfmt.toml
crabby-auth/: .bacon-locations  Cargo.toml  Justfile  README.md  build.rs  compose.yaml  docker-compose.yaml  justfile  mise.toml  sqlx.toml
crabby-auth/.sqlx/: query-03405f30e2d3dc27636d648004dce052eef814041599cd7169606483bf703398.json  query-04eabc131c79c8c9ca45233aecaceba1b4075fb90a2860e4cd802964a6320f25.json  query-070fac11936eb22bbd8289a6b04f9e769d47e6fc3b2d39d20844c8f045e5098c.json  query-0ef9463bc97eb6a07afba94491391372fed0744b65ceb6330ecea961deed8f83.json  query-39e26dd1b47c21b181e9d1a7aafae3557d17314eef3ae74348cefba618425a9c.json  query-405a3c95af145448f482a5b78482053b810b6753e6463de52fb399a38dff3f09.json  query-41161673f511166ac345a22a2fd2b12ff3f712f78e8e2115a4db55452ec3afec.json  query-50ca710e15e4fb3e4bf90ee7e0f8c5f70aa3910db49bf859dcbdcbc77bc9f390.json  query-554932185a88baed16c66ce18acfac3153c0099d8360e6fd39739bc92f7eb107.json  query-5876f2f596135a850306abb43b15050c9769982187579be40e0cf879f73c3b3d.json  query-63ca34fd1c0adfcfdfc790b18511305e76af75307fdd627ea187f587980e055f.json  query-6623735cad7b0d1bbabeac765e42216519890f83dd376d18800093f2f1c44495.json  query-6a9fa6df68f8ab4689371124ace4679c51b30db4d77d58b9ccf83d0819aa7141.json  query-7527263f55460d3aca1a3f543f551239b7f16bb957328bd0b4343081b3b24ce2.json  query-752f260726376acd63da6dd950856d75d9fde00b5b885a2b36de5da9d7aaaccd.json  query-759bb52a9165de4ca31962be48416f316667f435a6138540455bf363e1137cdd.json  query-79c28521b91463208fd497d4a3c7e0823abbfd78733aa2b0a2c9219d19b1d3e0.json  query-8f8fee2e5ecb102601388cc5b8275574f3a6688d38213c51e8911f21ec158dfc.json  query-9212c428694da8e62cb65a959ad131efbf49e3b226a60f2b136ad5a82b1d5ea0.json  query-97c49fb89c9da46553274df7f4cf2f1a51c4879f8d8186d0e6ea9635670408b2.json  query-9be868b5fc7744c6a5fa794bedc41fd4f93c13f4ccbc84805546b17682d2505c.json  query-a570f4a533d6f23c2638337764ba70015674ce6dff0bb0f3cf40b577763c7be2.json  query-d58f60d465b408ae8b97679ba29a4232a513030a23c8736d2e4e4588cf287092.json  query-d9d1874d95b9209ac60c3f48cd3adf8da4fda2401946d0a12bd3df32a82edec0.json  query-df2ca64918f75f5fea0cc56b9b74abd28a556bc3e6d52904d0e2e206e7ced2a2.json  query-e3306a83774f3eed0594abf8abac8e0af5940767eae2be06be9aa88e8e4b3c91.json  query-e64b6c58aa1ad2e4a7bf44e69dedc1c0f3020e80e973d7a2672214fd8d8fffab.json
crabby-auth/custom-images/: .env  Cargo.toml  Dockerfile
crabby-auth/custom-images/.cargo/: config.toml
crabby-auth/custom-images/.cockroach-certs/: ca.crt  client.crabby.crt  client.crabby.key  client.root.crt  client.root.key  node.crt  node.key
crabby-auth/custom-images/.cockroach-key/: ca.key
crabby-auth/db/migrations/: 20240428223551_user_table.down.sql  20240428223551_user_table.up.sql  20250615152215_auth_token.down.sql  20250615152215_auth_token.up.sql  20250819215021_paserk.up.sql
crabby-auth/migrations/: 20240428223551_user_table.up.sql  20250615152215_auth_token.down.sql  20250615152215_auth_token.up.sql  20250621010723_refresh_version.down.sql  20250621010723_refresh_version.up.sql  20250819215021_paserk.up.sql  20250904194418_refresh_token_revisions.up.sql  20260202002733_users.down.sql  20260202002733_users.up.sql  20260202003739_public_paseto.down.sql  20260202003739_public_paseto.up.sql  20260202004045_local_paseto.down.sql  20260202004045_local_paseto.up.sql  20260202004513_refresh.up.sql
crabby-auth/src/: .env  authenticate.rs  domain.rs  intercept.rs  lib.rs  main.rs  model.rs  test_client.rs  token.rs
crabby-auth/src/domain/: models.rs
crabby-auth/tests/: key_repo_it.rs  rps_it.rs  user_repo_it.rs
crabby-chat/: Cargo.toml  Dockerfile  Justfile  README.md
crabby-chat/src/: actors.rs  client.rs  error.rs  event.rs  handle.rs  id.rs  lib.rs  main.rs  messages.rs
crabby-chat/tests/: engine_integration.rs  nats_integration.rs
crabby-core/: Cargo.toml  README.md
crabby-core/src/: engine.rs  lib.rs  shutdown.rs  tokens.rs
crabby-fanout/: Cargo.toml  Justfile  README.md
crabby-fanout/src/: grpc_client.rs  lib.rs  main.rs  nats_publisher.rs  service.rs  traits.rs
crabby-fanout/tests/: fanout_nats_integration.rs  fanout_unit.rs
crabby-group/: Cargo.toml  Justfile  README.md  TODO.md  build.rs  openapi.json  pg-compose.yaml  sqlx.toml
crabby-group/.sqlx/: query-112fc0092cb36731c022b5c7b842f7816c26c34d08f2574ae3ebae42ca0a64da.json  query-11e60d3a2064406417d7d4ac618a13226fadde0be23e03756761c2e09378562a.json  query-34f920089a2ae7c6da5e97cb581c3af7bd21280efc8d8f64f0841a5311e93d74.json  query-43cf396cfeeaaa60eb2153032ecdb54202a4f48a3588ea7b3ed54cb42af06043.json  query-481bf0291f502fa1ad47f9bfd89f2b0b5601f0a78c847732a4cd74ca4d189696.json  query-55332f33ef86ca4ba6204e6d5747ebe0f614d8643eda5fd7e34edf7621dfafc9.json  query-5d163ee87f329b061b7a48128cc0a835f988555950220c717b36db9fcf92c7a1.json  query-643301dd6ef83f9285dfa8e3188951fd1db4558a81b87a994edfc1cf97be07a7.json  query-7c8149310b92a6e568d67eb98a83c78896e0b883503d9f9d085b2fc642d88682.json  query-94e1d6940d35013905baa976c62b34c8a384ddb3264f816de739fc719e0e71da.json  query-9abb3bbe192a49691e043a8beed659bf763098937d6f4d31a666c9d6512e9d5d.json  query-bb057d23af91f4297a4000ce8d4c8dbf0e720be7692840ebdcf501ee2ab601db.json  query-d66c6b74a7583dae510906351135466f9023143b081f0e261c6759017dfa9556.json  query-da52d5a7061d6870fe9a634fd5216fd6826adcd25110cf61ebcb8e806f6a45ae.json  query-eed8024c64c7e11dba449aa52987a0fbcd2259a3e3d078d12c842487ba6fe107.json  query-feca95b2a4f3221b124f1ea76da2628853bbbf0a37fd5650d1ffd121f53edacb.json
crabby-group/migrations/: 0001_group_table.up.sql  0002_group_membership_table.up.sql  0003_event.up.sql  0004_outbox.up.sql
crabby-group/src/: api.rs  database.rs  error.rs  grpc.rs  lib.rs  main.rs
crabby-group/tests/: api_unit_tests.rs  repo_it.rs
crabby-specs/: Cargo.toml  README.md  build.rs
crabby-specs/src/: codec.rs  grpc.rs  lib.rs  nats.rs  ws.rs
e2e/: Cargo.toml
e2e/src/: lib.rs
e2e/tests/: group_chat.rs
(+84 files in other folders)
