[workspace]

members = [
    "crabby-chat",
    "crabby-core",
    "crabby-auth",
    "crabby-specs",
    "crabby-group",
]

resolver = "2"

[workspace.dependencies]

serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.149"
eyre = "0.6.12"
sqlx = { version = "0.9.0-alpha.1", features = [
    "postgres",
    "migrate",
    "runtime-tokio",
    "uuid",
    "chrono",
    "sqlx-toml",
] }
