[package]
name = "crabby-auth"
version = "0.1.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "crabby_auth"
path = "src/lib.rs"
[[bin]]
name = "crabby-auth"
path = "src/main.rs"
[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash"] }
tokio-macros = "2.5.0"
dashmap = "6.1.0"
prost = "*"
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tonic = "*"
uuid = { version = "1.17.0", features = [
    "fast-rng",
    "v7",
    "v4",
    "serde",
    "macro-diagnostics",
] }

sqlx = { version = "0.9.0-alpha.1", features = [
    "postgres",
    "migrate",
    "runtime-tokio",
    "uuid",
    "chrono",
    "sqlx-toml",
] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde", "now"] }
dotenvy = "0.15.7"
pasetors = { version = "0.7.7", features = ["v4", "paserk"] }
blake3 = "1.8.2"
validator = { version = "0.20.0", features = ["derive"] }
crabby-core = { path = "../crabby-core" }
eyre = "0.6.12"
sha2 = "0.10.9"
hmac = "0.12.1"
[build-dependencies]
tonic-build = "*"
[dev-dependencies]
fake = "4.4.0"
rand = "0.9.1"
