[package]
name = "crabby-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "./src/client.rs"
[dependencies]
crabby-core = { path = "../crabby-core" }
uuid = { version = "1.8.0", features = ["v7", "serde", "macro-diagnostics"] }
axum = { version = "0.7.4", features = ["ws"] }
futures = "0.3.30"
hashbrown = "0.14.3"
machine-id = "0.4.0"
opentelemetry_sdk = "0.22.1"
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
async-trait = "0.1.80"
tokio-util = { version = "0.7.10", features = ["codec"] }
axum-macros = "0.4.1"
tokio-serde = { version = "0.9.0", features = ["json"] }
thiserror = "1.0.58"
reqwest = "0.12.4"
reqwest-websocket = "0.3.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.116"
