[package]
name = "crabby-chat"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "./src/client.rs"
[dependencies]
crabby-core = { path = "../crabby-core" }
crabby-specs = { path = "../crabby-specs" }
uuid = { version = "1.22.0", features = ["v7", "serde", "macro-diagnostics"] }
axum = { version = "0.8.8", features = ["ws"] }
futures = "0.3.30"
hashbrown = "0.14.5"
machine-id = "0.4.0"
opentelemetry_sdk = "0.22.1"
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
async-trait = "0.1.89"
tokio-util = { version = "0.7.10", features = ["codec"] }
axum-macros = "0.4.2"
tokio-serde = { version = "0.9.0", features = ["json"] }
thiserror = "1.0.58"
reqwest = "0.12.4"
reqwest-websocket = "0.3.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.149"
kameo = "0.19.2"
eyre = "0.6.12"
ferroid = { version = "1.0.2", features = ["async-tokio", "atomic", "serde", "snowflake"] }
