[package]
name = "crabby-chat"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "./src/client.rs"
[dependencies]
crabby-core = { path = "../crabby-core" }
crabby-specs = { path = "../crabby-specs" }
uuid = { version = "1.22.0", features = ["v7", "serde", "macro-diagnostics"] }
axum = { version = "0.8.8", features = ["ws"] }
serde = { workspace = true }
futures = "0.3.32"
hashbrown = "0.16.1"
opentelemetry_sdk = "0.31.0"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
async-trait = "0.1.89"
axum-macros = "0.5.0"
tokio-serde = { version = "0.9.0", features = ["json"] }
thiserror = "2.0.18"
reqwest = "0.13.2"
reqwest-websocket = "0.6.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde_json = { workspace = true }
kameo = "0.19.2"
eyre = { workspace = true }
ferroid = { version = "1.0.2", features = [
    "async-tokio",
    "atomic",
    "serde",
    "snowflake",
] }
jiff = "0.2.23"
