[package]
name = "crabby-group"
version = "0.1.0"
edition = "2024"
exclude = ["data", "logs"]

[lib]
name = "crabby_group"
path = "src/lib.rs"

[[bin]]
name = "crabby-group"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-routing"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
prost = "*"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.5.0"
uuid = { version = "1.22.0", features = ["serde", "v4", "v7"] }
schemars = "1.2.1"
serde.workspace = true
serde_json.workspace = true
eyre.workspace = true
into-response = "0.3.1"
sqlx.workspace = true
async-trait = "0.1.89"
thiserror = "2"
utoipa = { version = "5.4.0", features = [
    "uuid",
    "axum_extras",
    "openapi_extensions",
] }
utoipa-axum = "0.2.0"

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "*"

[dev-dependencies]
mockall = "0.13"
axum-test = "17"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
once_cell = "1"
url = "2"
