[package]
name = "crabby-specs"
version = "0.1.0"
edition = "2024"
[features]
nats = []
[dependencies]
ferroid = "1.0.2"
asyncapi-rust = { git = "https://github.com/paval-shlyk/asyncapi-rust.git", branch = "main" }
crabby-transport = { path = "../crabby-transport" }
schemars = { version = "1.2.1", features = ["uuid1", "chrono04"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["serde", "v7"] }
eyre.workspace = true
async-trait = "0.1.89"
async-nats = "0.47.0"
futures-util = "0.3.32"
bytes = { version = "1.11.1", features = ["serde"] }
thiserror = "2.0.18"
