[package]
name = "e2e"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
async-nats = "0.47"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
futures-util = "0.3"
eyre.workspace = true
http = "1"
rmp-serde = "1"
